--- a/package.json
+++ b/package.json
@@ -38,12 +38,20 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/query-core": "^5.51.9",
+    "aos": "^2.3.4",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cookie": "^0.6.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.7",
     "input-otp": "^1.2.4",
+    "jotai": "^2.9.1",
+    "jotai-cache": "^0.5.0",
+    "jotai-tanstack-query": "^0.8.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
@@ -51,20 +59,28 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-resizable-panels": "^2.0.22",
     "react-spinners": "^0.14.1",
+    "react-verification-input": "^4.1.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "validator": "^13.12.0",
     "vaul": "^0.9.1",
+    "wonka": "^6.3.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/validator": "^13.12.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
